getMediaBox() should use Integer as key, not Double. Replace new Integer with Integer.valueOf to save a bit of memory.